# mtgSpoilerBot

./: .env.template  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
migrations/: 20250814114617_init.py  20250814120410_remove_unneeded_columns.py
src/: __main__.py  main.py
src/bot/: bot.py
src/database/: database.py  populate_db.py
src/webScrap/: card.py  cardPageWithDescription.html  download-testing-html.sh  scrapping.py  scrappingTesting.ipynb  set.py  testingContent.html
webScrap/: scrapping.py
